--- a/BHW01.ipynb
+++ b/BHW01.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +96,7 @@
     "collapsed": false
    },
    "source": [
-    "# 1. 請試著對VIX變化量與S&P500指數日報酬率做出敘述統計。\n",
+    "# 1 請試著對VIX變化量與S&P500指數日報酬率做出敘述統計。\n",
     "    - 平均數、標準差、偏態、峰態\n",
     "    - 根據上述結果，討論此兩變數是否符合常態分佈\n",
     "    - 相關係數，一階自相關係數\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +157,7 @@
        "<AxesSubplot:ylabel='dvix'>"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -186,10 +186,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x124d92fd0>"
+       "<seaborn.axisgrid.FacetGrid at 0x121e297c0>"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
        "<AxesSubplot:ylabel='ret'>"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -304,10 +304,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1256cb1c0>"
+       "<seaborn.axisgrid.FacetGrid at 0x122093d30>"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -345,7 +345,7 @@
     "collapsed": false
    },
    "source": [
-    "# 2. 請試著做出以下分析得到VIX變化量與S&P500指數報酬率的關係為正相關、負相關、無相關。\n",
+    "# 2 請試著做出以下分析得到VIX變化量與S&P500指數報酬率的關係為正相關、負相關、無相關。\n",
     "    - 相關係數\n",
     "    - 散布圖\n",
     "    - 迴歸分析"
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -445,7 +445,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.638\n",
       "Method:                 Least Squares   F-statistic:                     845.6\n",
       "Date:                Sat, 26 Dec 2020   Prob (F-statistic):          7.19e-108\n",
-      "Time:                        21:52:31   Log-Likelihood:                 1531.9\n",
+      "Time:                        22:06:08   Log-Likelihood:                 1531.9\n",
       "No. Observations:                 481   AIC:                            -3060.\n",
       "Df Residuals:                     479   BIC:                            -3051.\n",
       "Df Model:                           1                                         \n",
@@ -478,7 +478,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.638\n",
       "Method:                 Least Squares   F-statistic:                     496.9\n",
       "Date:                Sat, 26 Dec 2020   Prob (F-statistic):           4.88e-76\n",
-      "Time:                        21:52:31   Log-Likelihood:                 1531.9\n",
+      "Time:                        22:06:08   Log-Likelihood:                 1531.9\n",
       "No. Observations:                 481   AIC:                            -3060.\n",
       "Df Residuals:                     479   BIC:                            -3051.\n",
       "Df Model:                           1                                         \n",
@@ -496,14 +496,7 @@
       "==============================================================================\n",
       "\n",
       "Notes:\n",
-      "[1] Standard Errors are heteroscedasticity and autocorrelation robust (HAC) using 5 lags and without small sample correction"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "[1] Standard Errors are heteroscedasticity and autocorrelation robust (HAC) using 5 lags and without small sample correction\n",
       "******************************************************************************\n",
       "\n",
       ">>> 從 Newey-West 調整的分析結果來看，dvix 的一次係數 p value 仍然小於 0.001，表示對於負相關的結果依然是強烈顯著。\n"
@@ -530,7 +523,7 @@
     "collapsed": false
    },
    "source": [
-    "# 3. 請試著做出以下分析得到S&P500指數股價報酬與移動平均(`MA5`與`MA20`)的關係為正相關、負相關、無相關。\n",
+    "# 3 請試著做出以下分析得到S&P500指數股價報酬與移動平均(`MA5`與`MA20`)的關係為正相關、負相關、無相關。\n",
     "    - 相關係數\n",
     "    - 散布圖\n",
     "    - 回歸分析"
@@ -547,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -580,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -610,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -649,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -664,7 +657,7 @@
       "Model:                            OLS   Adj. R-squared:                 -0.000\n",
       "Method:                 Least Squares   F-statistic:                    0.8596\n",
       "Date:                Sat, 26 Dec 2020   Prob (F-statistic):              0.354\n",
-      "Time:                        21:52:31   Log-Likelihood:                 1281.5\n",
+      "Time:                        22:06:09   Log-Likelihood:                 1281.5\n",
       "No. Observations:                 478   AIC:                            -2559.\n",
       "Df Residuals:                     476   BIC:                            -2551.\n",
       "Df Model:                           1                                         \n",
@@ -708,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -723,7 +716,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.003\n",
       "Method:                 Least Squares   F-statistic:                     2.360\n",
       "Date:                Sat, 26 Dec 2020   Prob (F-statistic):              0.125\n",
-      "Time:                        21:52:31   Log-Likelihood:                 1236.0\n",
+      "Time:                        22:06:09   Log-Likelihood:                 1236.0\n",
       "No. Observations:                 463   AIC:                            -2468.\n",
       "Df Residuals:                     461   BIC:                            -2460.\n",
       "Df Model:                           1                                         \n",
@@ -754,6 +747,15 @@
     "f_ma20[\"const\"] = 1\n",
     "reg_normal = sm.OLS(data[\"ret\"], f_ma20[x1], missing=\"drop\").fit()\n",
     "print(reg_normal.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# 4  請利用迴歸分析結果，討論移動平均和VIX報酬率對於S&P500報酬的預測能力。"
    ]
   },
   {
