--- a/BHW01.ipynb
+++ b/BHW01.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -96,11 +96,7 @@
     "collapsed": false
    },
    "source": [
-    "# 1 請試著對VIX變化量與S&P500指數日報酬率做出敘述統計。\n",
-    "    - 平均數、標準差、偏態、峰態\n",
-    "    - 根據上述結果，討論此兩變數是否符合常態分佈\n",
-    "    - 相關係數，一階自相關係數\n",
-    "    - 根據上述結果，討論此兩變數的資料結構"
+    "# 1 請試著對VIX變化量與S&P500指數日報酬率做出敘述統計。"
    ]
   },
   {
@@ -114,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +153,7 @@
        "<AxesSubplot:ylabel='dvix'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -178,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -186,10 +182,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x121e297c0>"
+       "<seaborn.axisgrid.FacetGrid at 0x1222a1be0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -232,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +271,7 @@
        "<AxesSubplot:ylabel='ret'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -296,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -304,10 +300,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x122093d30>"
+       "<seaborn.axisgrid.FacetGrid at 0x122275040>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -345,10 +341,7 @@
     "collapsed": false
    },
    "source": [
-    "# 2 請試著做出以下分析得到VIX變化量與S&P500指數報酬率的關係為正相關、負相關、無相關。\n",
-    "    - 相關係數\n",
-    "    - 散布圖\n",
-    "    - 迴歸分析"
+    "# 2 請試著做出以下分析得到VIX變化量與S&P500指數報酬率的關係為正相關、負相關、無相關。"
    ]
   },
   {
@@ -362,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -391,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -430,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -445,7 +438,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.638\n",
       "Method:                 Least Squares   F-statistic:                     845.6\n",
       "Date:                Sat, 26 Dec 2020   Prob (F-statistic):          7.19e-108\n",
-      "Time:                        22:06:08   Log-Likelihood:                 1531.9\n",
+      "Time:                        22:08:22   Log-Likelihood:                 1531.9\n",
       "No. Observations:                 481   AIC:                            -3060.\n",
       "Df Residuals:                     479   BIC:                            -3051.\n",
       "Df Model:                           1                                         \n",
@@ -478,7 +471,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.638\n",
       "Method:                 Least Squares   F-statistic:                     496.9\n",
       "Date:                Sat, 26 Dec 2020   Prob (F-statistic):           4.88e-76\n",
-      "Time:                        22:06:08   Log-Likelihood:                 1531.9\n",
+      "Time:                        22:08:22   Log-Likelihood:                 1531.9\n",
       "No. Observations:                 481   AIC:                            -3060.\n",
       "Df Residuals:                     479   BIC:                            -3051.\n",
       "Df Model:                           1                                         \n",
@@ -523,10 +516,7 @@
     "collapsed": false
    },
    "source": [
-    "# 3 請試著做出以下分析得到S&P500指數股價報酬與移動平均(`MA5`與`MA20`)的關係為正相關、負相關、無相關。\n",
-    "    - 相關係數\n",
-    "    - 散布圖\n",
-    "    - 回歸分析"
+    "# 3 請試著做出以下分析得到S&P500指數股價報酬與移動平均(`MA5`與`MA20`)的關係為正相關、負相關、無相關。"
    ]
   },
   {
@@ -540,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -573,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -582,7 +572,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "從散佈圖可以看出五日平均與 S&P500 報酬率沒有明顯的相關性。\n"
+      "從散佈圖可以看出五日平均與 S&P500 報酬率沒有明顯的相關性。"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -603,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -642,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -657,7 +654,7 @@
       "Model:                            OLS   Adj. R-squared:                 -0.000\n",
       "Method:                 Least Squares   F-statistic:                    0.8596\n",
       "Date:                Sat, 26 Dec 2020   Prob (F-statistic):              0.354\n",
-      "Time:                        22:06:09   Log-Likelihood:                 1281.5\n",
+      "Time:                        22:08:22   Log-Likelihood:                 1281.5\n",
       "No. Observations:                 478   AIC:                            -2559.\n",
       "Df Residuals:                     476   BIC:                            -2551.\n",
       "Df Model:                           1                                         \n",
@@ -701,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -716,7 +713,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.003\n",
       "Method:                 Least Squares   F-statistic:                     2.360\n",
       "Date:                Sat, 26 Dec 2020   Prob (F-statistic):              0.125\n",
-      "Time:                        22:06:09   Log-Likelihood:                 1236.0\n",
+      "Time:                        22:08:22   Log-Likelihood:                 1236.0\n",
       "No. Observations:                 463   AIC:                            -2468.\n",
       "Df Residuals:                     461   BIC:                            -2460.\n",
       "Df Model:                           1                                         \n",
